<resources>
    <string name="app_name">Pilgrim</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="start_now">Start Now</string>

    <string name="facebook_app_id">281213572521072</string>
    <string name="fb_login_protocol_scheme">fb281213572521072</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="pilgrim">Pilgrim</string>
    <string name="antwerp">Antwerp</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="or">OR</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="_0h0m0s">0h0m0s</string>
    <string name="_6_10">6/10</string>
    <string name="previous_hint">Previous hint:</string>
    <string name="time">Time</string>
    <string name="help">Help</string>
    <string name="quit">Quit</string>
    <string name="go_to_the_next_target">Go to the next target</string>
    <string name="places_visited">Places Visited</string>
    <string name="near_the_water_this_red_bricked_building_resides_two_different_docks_it_divides_find_the_first_letter_of_its_name_outside_before_you_get_caught_up_by_the_tide">Near the water this red bricked building resides. Two different docks, it divides. Find the first letter of its name, outside, before you get caught up by the tide.</string>
    <string name="starting_point">Starting Point</string>
    <string name="central_railway_station">Central Railway Station</string>
    <string name="go_to_the_starting_point_before_beginning_the_pilgrimage">Go to the starting point before beginning the pilgrimage</string>
    <string name="create_account">Create Account</string>
    <string name="datum">Date of birth</string>

    <string name="game_rules_eng">
        \n
        Welcome to Pilgrim.\n\n
        Before you start, please make sure you have also downloaded and installed the Pilgrim AR application.\n
        \n
        You are stuck in the city of Antwerp.\n\n
        When you start the game you will be given a cryptic question about a location.\n\n
        It is up to you to figure out where this location is and to try to find it.\n\n
        When you arrive at the location try to find
        the specific building, statue etc. \n\n
        When you think you have found it, you need to push on the camera button to check wheter you are correct.\n
        If you are correct,
        the answer will be augmented.\n\n
        Fill in the answer and you will be given the next location. \n\n
        To help you we have provided a distancebar to let you know if you are getting closer to your target.\n
        We have also provided you with a clue system.\n\n
        Click on help to get a clue, but beware!\n
        You only have 2 clues per location and each time you use a clue, you will get a
        penalty of 30 sec.\n\n
        Goodluck!!
        \n\n

    </string>

    <string name="about_eng">
        \n\n
        This Application was made for the course "Cloud Applications" of the Artesis Plantijn Hogeschool in Antwerp.\n\n
        The developers are Robin Laevaert, Midas Van Gucht and Issam Moussaïd, 3rd year students Electronics-ICT.\n\n
        We would like to thank the lecturers Tom Peeters and Sven Mariën for their help and guidance.\n\n

        Feel free to contact us if you have any questions.\n\n\n
        robin.laevart@student.ap.be\n
        midas.van.gucht@student.ap.be\n
        issam.moussaid@student.ap.be\n




    </string>


</resources>
